Apply OpenRewrite modernization recipes
Run UpgradeToJava21, CommonStaticAnalysis, and JUnit5BestPractices
recipes. Changes include: modifier ordering, unnecessary parentheses
removal, abstract class constructor visibility, test prefix removal,
test class visibility, and String.formatted() usage.

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>