@@ -2,16 +2,16 @@ package com.maybeitssquid.ach;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-abstract public class AbstractChainableTest {
+public abstract class AbstractChainableTest {
 
-    abstract protected Chainable createProcessor();
+    protected abstract Chainable createProcessor();
 
     protected void testUnchanged(final int codepoint) {
         test(codepoint, Character.toString(codepoint));
     }
 
     protected void test(final int codepoint, final CharSequence expected) {
-        final String message = String.format("Expected %s (%04X) to be returned as '%s'.", Character.getName(codepoint), codepoint, expected);
+        final String message = "Expected %s (%04X) to be returned as '%s'.".formatted(Character.getName(codepoint), codepoint, expected);
         test(codepoint, expected, message);
     }
 
